--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </p>
                     <div class="projeto-link">
                         <img src="img/seta-neon.png" alt="Seta">
-                        <a href="https://maisazs.github.io/projetinhos/portfolio/index.html" target="_blank">Acesse aqui!</a>
+                        <a href="https://maisazs.github.io/portfolio/" target="_blank">Acesse aqui!</a>
                     </div>
                 </div>
 
@@ -159,7 +159,7 @@
                     </p>
                     <div class="projeto-link">
                         <img src="img/seta-neon.png" alt="Seta">
-                        <a href="https://maisazs.github.io/projetinhos/landing-page-ballerini/index.html" target="_blank">Acesse aqui!</a>
+                        <a href="https://maisazs.github.io/landing-page-ballerini/" target="_blank">Acesse aqui!</a>
                     </div>
                 </div>
 
@@ -171,7 +171,7 @@
                     </p>
                     <div class="projeto-link">
                         <img src="img/seta-neon.png" alt="Seta">
-                        <a href="https://maisazs.github.io/projetinhos/landing-page-barbearia/index.html" target="_blank">Acesse aqui!</a>
+                        <a href="https://maisazs.github.io/landing-page-barbearia/" target="_blank">Acesse aqui!</a>
                     </div>
                 </div>
 
@@ -183,7 +183,7 @@
                     </p>
                     <div class="projeto-link">
                         <img src="img/seta-neon.png" alt="Seta">
-                        <a href="https://maisazs.github.io/projetinhos/sandro/index.html" target="_blank">Acesse aqui!</a>
+                        <a href="https://maisazs.github.io/sandro/" target="_blank">Acesse aqui!</a>
                     </div>
                 </div>
 
@@ -195,7 +195,7 @@
                     </p>
                     <div class="projeto-link">
                         <img src="img/seta-neon.png" alt="Seta">
-                        <a href="https://maisazs.github.io/projetinhos/landing-page-iphone/index.html" target="_blank">Acesse aqui!</a>
+                        <a href="https://maisazs.github.io/landing-page-iphone/" target="_blank">Acesse aqui!</a>
                     </div>
                 </div>
                 <button id="next">></button>
