--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </footer>
 
     <!--Button whatsapp-->
-    <a href="https://web.whatsapp.com/send?phone=5531992166917" target="_blank" class="btn-whatsapp" data-aos="zoom-in-up" data-aos-delay="400"><img src="img/whatssapp.png" alt="whatssapp"></a>
+    <a href="https://wa.me/5531992166917" target="_blank" class="btn-whatsapp" data-aos="zoom-in-up" data-aos-delay="400"><img src="img/whatssapp.png" alt="whatssapp"></a>
 
     <script src="script.js"></script>
     <script>
