--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="baixar-cv" data-aos="fade-up" data-aos-delay="250">
-                <a href="Currículo-Mayza.pdf" download="Currículo-Mayza.pdf">Baixar CV</a>
+                <a href="Currículo-Mayza.pdf" download="Currículo-Mayza.pdf">Download CV</a>
                 <img src="img/seta-neon.png" alt="seta">
             </div>
         </section>
