--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             HTML, ou <em>Hypertext Markup Language</em>, é a linguagem utilizada para criar páginas web, definindo sua <em>estrutura e conteúdo</em> por meio de uma série de elementos e tags. É a base da web, permitindo a inclusão de texto, imagens, links e elementos interativos, interpretados pelos navegadores para exibir o conteúdo de forma visualmente atraente e funcional para os usuários.</p>
                     </div>
                 </div>
-                <div data-aos="fade-up" data-aos-delay="400">
+                <!--<div data-aos="fade-up" data-aos-delay="400">
                     <div class="skill-box">
                         <div class="skill-title">
                             <div class="skill-img">
@@ -117,6 +117,17 @@
                             <h3>Sass</h3>
                         </div>
                         <p>Sass, ou <em>Syntactically Awesome Stylesheets</em>, é uma extensão da linguagem CSS que oferece recursos adicionais, como <em>variáveis, funções e mixins</em>, para facilitar a escrita e a manutenção de estilos em projetos web. Ele é compilado para CSS padrão antes de ser implementado.</p>
+                    </div>
+                </div>-->
+                <div data-aos="fade-up" data-aos-delay="400">
+                    <div class="skill-box">
+                        <div class="skill-title">
+                            <div class="skill-img">
+                                <img src="img/js.png" alt="JavaScript" style="border-radius: 50%;">
+                            </div>
+                            <h3>JavaScript</h3>
+                        </div>
+                        <p><em>JavaScript</em> é uma linguagem de programação de alto nível, criada em 1995, amplamente usada para <em>desenvolvimento web</em>. Ela permite adicionar interatividade e dinamismo a páginas web, sendo executada diretamente no navegador do usuário.</p>
                     </div>
                 </div>
                 <div data-aos="fade-up" data-aos-delay="400">
@@ -148,6 +159,18 @@
                     <div class="projeto-link">
                         <img src="img/seta-neon.png" alt="Seta">
                         <a href="https://maisazs.github.io/portfolio/" target="_blank">Acesse aqui!</a>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <h1>Calculadora</h1>
+                    <img src="img/calcClara.png" alt="portfolio">
+                    <p>
+                        Projeto de calculadora desenvolvida com <em>HTML</em>, <em>CSS</em> e <em>JavaScript</em>.
+                    </p>
+                    <div class="projeto-link">
+                        <img src="img/seta-neon.png" alt="Seta">
+                        <a href="https://maisazs.github.io/calculadora/" target="_blank">Acesse aqui!</a>
                     </div>
                 </div>
 
