--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="header-nav" data-aos="fade-down" data-aos-delay="300">
             <nav class="nav">
                 <ul type="none" class="nav-list" data-aos="fade-down" data-aos-delay="400">
-                    <li><a href="https://www.instagram.com/maisazs/" target="_blank"  class="li-hover"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/mayza-ester-6a9b55233/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
+                    <li><a href="https://www.instagram.com/maisazs?igsh=MXh1aXdianJzNWtlbA%3D%3D&utm_source=qr " target="_blank"  class="li-hover"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/mayza-ester-assis-silva-6a9b55233?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app " target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
                     <li><a href="https://github.com/maisazs" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
                 </ul>
                 <ul type="none" class="nav-list nav-list-sections" data-aos="fade-down" data-aos-delay="400">
@@ -260,8 +260,8 @@
 
     <footer class="footer">
         <ul type="none" class="footer-list">
-            <li><a href="https://www.instagram.com/maisazs/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/mayza-ester-6a9b55233/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://www.instagram.com/maisazs?igsh=MXh1aXdianJzNWtlbA%3D%3D&utm_source=qr " target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/mayza-ester-assis-silva-6a9b55233?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app " target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
             <li><a href="https://github.com/maisazs" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
     </footer>
 
