add projeto lista de tarefas

--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
                 </div>
 
                 <div class="item">
+                    <h1>To-Do List</h1>
+                    <img src="img/todo.png" alt="portfolio">
+                    <p>
+                        Projeto de Lista de tarefas desenvolvida com <em>React</em>.
+                    </p>
+                    <div class="projeto-link">
+                        <img src="img/seta-neon.png" alt="Seta">
+                        <a href="https://maisazs.github.io/todo/" target="_blank">Acesse aqui!</a>
+                    </div>
+                </div>
+
+                <div class="item">
                     <h1>Calculadora</h1>
                     <img src="img/calcClara.png" alt="portfolio">
                     <p>
