--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
                 </div>
 
                 <div class="item">
+                    <h1>Landing Page - <span>Positivus</span></h1>
+                    <img src="img/positivus.png" alt="positivus">
+                    <p>
+                        Projeto que desenvolvi utilizando <em>HTML</em>, <em>CSS</em> e <em>JavaScript</em>. A página segue um design que encontrei na comunidade do Figma, e foi uma ótima oportunidade para aprimorar minhas habilidades em front-end.
+                    </p>
+                    <div class="projeto-link">
+                        <img src="img/seta-neon.png" alt="Seta">
+                        <a href="https://maisazs.github.io/lp/" target="_blank">Acesse aqui!</a>
+                    </div>
+                </div>
+
+                <div class="item">
                     <h1>To-Do List</h1>
                     <img src="img/todo.png" alt="portfolio">
                     <p>
