adicionei um projeto novo - rnw

--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
                 </div>
 
                 <div class="item">
+                    <h1>Landing Page - <span>RNW</span></h1>
+                    <img src="img/rnw.png" alt="RNW">
+                    <p>
+                        Projeto que desenvolvi utilizando <em>HTML</em>, <em>CSS</em>, <em>JavaScript</em> e <em>Tailwind</em>. A página segue um design que foi criado por meu namorado no Figma, e foi uma ótima oportunidade para aprimorar minhas habilidades em front-end.
+                    </p>
+                    <div class="projeto-link">
+                        <img src="img/seta-neon.png" alt="Seta">
+                        <a href="https://maisazs.github.io/rnw/" target="_blank">Acesse aqui!</a>
+                    </div>
+                </div>
+                
+                <div class="item">
                     <h1>Landing Page - <span>Positivus</span></h1>
                     <img src="img/positivus.png" alt="positivus">
                     <p>
