--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
             </div>
             <div class="sec1-baixo" data-aos="fade-up" data-aos-delay="300">
                 <h1>Sou estudante de <br><span id="sec1-baixo-efeito-maquina">Engenharia de Software.</span></h1>
-                <p class="sec1-baixo-p1">Atualmente estou em busca do meu <span>primeiro estágio!</span></p>
-                <p class="sec1-baixo-p2">Sou uma estudante no quarto período de Engenharia de Software no Centro Universitário Católica do Leste de Minas Gerais, em busca de estágio para expandir minha experiência profissional. Estou focando, atualmente, na minha especialização no desenvolvimento Front-End e tenho o objetivo claro de me tornar uma programadora de destaque nessa área. Estou pronta para enfrentar os desafios que surgirem e alcançar meus objetivos profissionais.</p>
+                <p class="sec1-baixo-p2">Sou estudante do sexto período de Engenharia de Software no Centro Universitário Católica do Leste de Minas Gerais. Atualmente, atuo como estagiária em desenvolvimento Front-End na Tunni e também realizo projetos como freelancer. Tenho me dedicado à especialização nessa área, buscando aprimorar continuamente minhas habilidades técnicas e criativas. Meu objetivo é me destacar como desenvolvedora Front-End, enfrentando com determinação os desafios que surgirem ao longo da minha jornada profissional.</p>
             </div>
         </section>
     </header>
@@ -93,7 +92,6 @@
                             </div>
                             <h3>CSS 3</h3>
                         </div>
-                        <p>CSS, ou <em>Cascading Style Sheets</em>, é uma linguagem de estilo usada para controlar a apresentação visual de documentos HTML. Ele separa o conteúdo estrutural do documento da sua apresentação, permitindo que os desenvolvedores definam o <em>layout, cores, fontes e outros aspectos visuais</em> de uma <em>página web</em>.</p>
                     </div>
                 </div>
                 <div data-aos="fade-up" data-aos-delay="300">
@@ -105,7 +103,6 @@
                             <h3>HTML 5</h3>
                         </div>
                         <p>
-                            HTML, ou <em>Hypertext Markup Language</em>, é a linguagem utilizada para criar páginas web, definindo sua <em>estrutura e conteúdo</em> por meio de uma série de elementos e tags. É a base da web, permitindo a inclusão de texto, imagens, links e elementos interativos, interpretados pelos navegadores para exibir o conteúdo de forma visualmente atraente e funcional para os usuários.</p>
                     </div>
                 </div>
                 <!--<div data-aos="fade-up" data-aos-delay="400">
@@ -127,7 +124,6 @@
                             </div>
                             <h3>JavaScript</h3>
                         </div>
-                        <p><em>JavaScript</em> é uma linguagem de programação de alto nível, criada em 1995, amplamente usada para <em>desenvolvimento web</em>. Ela permite adicionar interatividade e dinamismo a páginas web, sendo executada diretamente no navegador do usuário.</p>
                     </div>
                 </div>
                 <div data-aos="fade-up" data-aos-delay="400">
@@ -138,7 +134,36 @@
                             </div>
                             <h3>MySQL</h3>
                         </div>
-                        <p>O MySQL é um sistema de gerenciamento de <em>banco de dados</em>, que utiliza a linguagem SQL como interface. É atualmente um dos sistemas de gerenciamento de bancos de dados mais populares da <em>Oracle Corporation</em>.</p>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-delay="400">
+                    <div class="skill-box">
+                        <div class="skill-title">
+                            <div class="skill-img">
+                                <img src="img/Tailwindlogo.png" alt="mysql">
+                            </div>
+                            <h3>Tailwind CSS</h3>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-delay="400">
+                    <div class="skill-box">
+                        <div class="skill-title">
+                            <div class="skill-img">
+                                <img src="img/react.jpg" alt="mysql">
+                            </div>
+                            <h3>React</h3>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-delay="400">
+                    <div class="skill-box">
+                        <div class="skill-title">
+                            <div class="skill-img">
+                                <img src="img/wordpresslogo.png" alt="mysql">
+                            </div>
+                            <h3>Wordpress</h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -159,6 +184,18 @@
                     <div class="projeto-link">
                         <img src="img/seta-neon.png" alt="Seta">
                         <a href="https://maisazs.github.io/portfolio/" target="_blank">Acesse aqui!</a>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <h1>Página de <span>Redirecionamento</span></h1>
+                    <img src="img/site-wordpress.png" alt="RNW">
+                    <p>
+                        Página com redirecionamento automático para o Whatsapp desenvolvida com WordPress.
+                    </p>
+                    <div class="projeto-link">
+                        <img src="img/seta-neon.png" alt="Seta">
+                        <a href="https://scienceclub.app.br/redirect-youtube/" target="_blank">Acesse aqui!</a>
                     </div>
                 </div>
 
